adding editable text

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,16 @@
         android:contentDescription="@string/Yellow_star"
         app:srcCompat="@android:drawable/btn_star_big_on" />
 
+    <EditText
+        android:id="@+id/nickname_edit"
+        style="@style/NameStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="@string/nickname_hint"
+        android:inputType="textPersonName|textImeMultiLine"
+        android:textAlignment="center" />
+
     <ScrollView
         android:id="@+id/bio_scroll"
         android:layout_width="match_parent"
