--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,14 +15,6 @@
         android:text="@string/name"
         android:textAlignment="center" />
 
-    <ImageView
-        android:id="@+id/star_image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/layout_margin"
-        android:contentDescription="@string/Yellow_star"
-        app:srcCompat="@android:drawable/btn_star_big_on" />
-
     <EditText
         android:id="@+id/nickname_edit"
         style="@style/NameStyle"
@@ -32,6 +24,33 @@
         android:hint="@string/nickname_hint"
         android:inputType="textPersonName|textImeMultiLine"
         android:textAlignment="center" />
+
+    <TextView
+        android:id="@+id/nickname_text"
+        style="@style/NameStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:visibility="gone" />
+
+    <Button
+        android:id="@+id/done_button"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/layout_margin"
+        android:fontFamily="@font/roboto"
+        android:text="@string/button_text"
+        app:backgroundTint="@color/teal_200" />
+
+    <ImageView
+        android:id="@+id/star_image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/layout_margin"
+        android:contentDescription="@string/Yellow_star"
+        app:srcCompat="@android:drawable/btn_star_big_on" />
 
     <ScrollView
         android:id="@+id/bio_scroll"
